[package]
name = "rustfstest"
version = "0.1.0"
edition = "2021"
authors = ["hukeyang <hky1999@buaa.edu.cn>"]
description = "A Rust-based simple fs benchmark, refer to https://github.com/LLNL/mdtest.git"

# [target.'cfg(target_os = "shyper")'.dependencies]
# unishyper = { path = "../unishyper", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
clap = { version = "4.1", features = ["derive"], optional = true }


[dependencies]
cfg-if = "1.0.0"
unishyper = { path = "../unishyper", default-features = false, optional = true }
# micromath = "2.0.0"
# clap = { version = "4.1", features = ["derive"], optional = true }

[features]
# default = ["std"]
default = ["unishyper-alloc", "fat", "qemu"]
unishyper-alloc = [
    "unishyper/alloc",
    "unishyper/fs",
    "unishyper/serial",
]
unishyper-std = [
    "unishyper/std",
    "unishyper/fs",
]
unilib = [
    "unishyper/unilib",
]
fat = [
    "unishyper/fat",
]
qemu = [
    "unishyper/qemu",
]
shyper = [
    "unishyper/shyper",
]
std = ["dep:clap"]
